# mlops

./: model.py
mlops_repo/: .gitignore  Makefile  README.md  analyze_profile.py  cloudbuild.yaml  data.dvc  data.py  logger.py  main.py  model_conf.yaml  output.prof  pyproject.toml  requirements.txt  test.py  trace.json  trainer.dockerfile
mlops_repo/.dvc/: config
mlops_repo/.history/: .gitignore_20240514114410  .gitignore_20240602001150  .gitignore_20240625212030  .gitignore_20240625212053  .gitignore_20240629005033  Dockerfile_20240629011141  Dockerfile_20240629011149  Dockerfile_20240629011156  Dockerfile_20240629011346  cloudbuild_20240628234058.yaml  cloudbuild_20240628234110.yaml  cloudbuild_20240628234123.yaml  cloudbuild_20240628234354.yaml  cloudbuild_20240628234625.yaml  cloudbuild_20240628235021.yaml  cloudbuild_20240628235236.yaml  cloudbuild_20240629002933.yaml  cloudbuild_20240629003717.yaml  cloudbuild_20240629005925.yaml  cloudbuild_20240629010413.yaml  cloudbuild_20240629010936.yaml  cloudbuild_20240629011955.yaml  logger_20240602104941.py  logger_20240602112722.py  logger_20240602112803.py  logger_20240602112829.py  logger_20240602112912.py  logger_20240602112944.py  logger_20240602112956.py  logger_20240602113006.py  logger_20240602113031.py  logger_20240602113041.py  logger_20240602113119.py  logger_20240602113126.py  logger_20240602113207.py  logger_20240602135157.py  logger_20240602135324.py  logger_20240602135340.py  logger_20240602135403.py  logger_20240602135454.py  (+9 more)
mlops_repo/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
(+954 files in other folders)
